# portable-pty-fixed

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: lib.rs  test_helpers.rs  unix.rs
src/win/: mod.rs  pseudocon.rs  psuedocon.rs
tests/: integration.rs  slow_reader_thread.rs  test_bash.rs  test_helpers.rs  test_slow_reader.rs  try_reading_after_child_exit.rs
tests/interactive_session/: slow_reader_thread.rs  test_bash.rs  try_reading_pipe_after_child_exit.rs
tests/oneshot_command/: test_echo.rs  test_kill.rs  test_wait_before_kill_stress.rs
windows/: flake.nix
